kaggle data ended up being kept only for companies that didn't have credit ratings

--- a/Code/Data Loading and Cleaning/Credit Rating/Credit Ratings on Fixed Quarter Dates with Earnings Call Date for Linkup.ipynb
+++ b/Code/Data Loading and Cleaning/Credit Rating/Credit Ratings on Fixed Quarter Dates with Earnings Call Date for Linkup.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "[3171 rows x 14 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "27         2016-10-01"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        "[9117 rows x 15 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -1027,136 +1027,30 @@
       "source\n",
       "web       18341\n",
       "kaggle    12731\n",
-      "Name: count, dtype: int64\n"
+      "Name: count, dtype: int64\n",
+      "31072\n"
      ]
     }
    ],
    "source": [
     "# check source variable\n",
-    "print(earnings_call_dates['source'].value_counts())"
+    "print(earnings_call_dates['source'].value_counts())\n",
+    "print(len(earnings_call_dates))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 170,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ticker</th>\n",
-       "      <th>earnings_call_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>A</td>\n",
-       "      <td>2011-02-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>A</td>\n",
-       "      <td>2011-05-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>A</td>\n",
-       "      <td>2011-08-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>A</td>\n",
-       "      <td>2011-11-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>A</td>\n",
-       "      <td>2012-02-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31067</th>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2016-02-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31068</th>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2016-05-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31069</th>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2016-08-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31070</th>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2016-11-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31071</th>\n",
-       "      <td>ZTS</td>\n",
-       "      <td>2017-02-16</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>31072 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      ticker earnings_call_date\n",
-       "0          A         2011-02-15\n",
-       "1          A         2011-05-13\n",
-       "2          A         2011-08-16\n",
-       "3          A         2011-11-16\n",
-       "4          A         2012-02-16\n",
-       "...      ...                ...\n",
-       "31067    ZTS         2016-02-16\n",
-       "31068    ZTS         2016-05-04\n",
-       "31069    ZTS         2016-08-03\n",
-       "31070    ZTS         2016-11-02\n",
-       "31071    ZTS         2017-02-16\n",
-       "\n",
-       "[31072 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "earnings_call_dates = earnings_call_dates[['ticker', 'earnings_call_date']].drop_duplicates()\n",
-    "earnings_call_dates"
+    "# earnings_call_dates = earnings_call_dates[['ticker', 'earnings_call_date']].drop_duplicates()\n",
+    "# earnings_call_dates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -1173,6 +1067,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   ticker  quarter  year earnings_call_datetime  \\\n",
+      "21     AA        1  2010    2010-04-12 21:28:09   \n",
+      "22     AA        2  2010    2010-07-13 00:24:12   \n",
+      "23     AA        3  2010    2010-10-07 23:01:19   \n",
+      "24     AA        4  2010    2011-01-10 23:54:19   \n",
+      "25     AA        1  2011    2011-04-11 23:00:14   \n",
+      "\n",
+      "                                              content source   web  \\\n",
+      "21  Operator: Welcome to the first quarter 2010 Al...    web  True   \n",
+      "22  Operator: Good day, ladies and gentlemen, and ...    web  True   \n",
+      "23  Operator: Good day, ladies and gentlemen, and ...    web  True   \n",
+      "24  Operator: Good day, ladies and gentlemen and w...    web  True   \n",
+      "25  Operator: Good day, ladies and gentlemen, and ...    web  True   \n",
+      "\n",
+      "   earnings_call_date  \n",
+      "21         2010-04-12  \n",
+      "22         2010-07-13  \n",
+      "23         2010-10-07  \n",
+      "24         2011-01-10  \n",
+      "25         2011-04-11  \n",
+      "  ticker  quarter  year earnings_call_datetime  \\\n",
+      "0      A        3  2011             2011-02-15   \n",
+      "1      A        4  2011             2011-05-13   \n",
+      "2      A        1  2012             2011-08-16   \n",
+      "3      A        2  2012             2011-11-16   \n",
+      "4      A        3  2012             2012-02-16   \n",
+      "\n",
+      "                                             content  source    web  \\\n",
+      "0  Operator: Good day, ladies and gentlemen, and ...  kaggle  False   \n",
+      "1  Operator: Good day, ladies and gentlemen, and ...  kaggle  False   \n",
+      "2  Operator: Good day, ladies and gentlemen, and ...  kaggle  False   \n",
+      "3  Operator: Good day, ladies and gentlemen, and ...  kaggle  False   \n",
+      "4  Operator: Good day, ladies and gentlemen, and ...  kaggle  False   \n",
+      "\n",
+      "  earnings_call_date  \n",
+      "0         2011-02-15  \n",
+      "1         2011-05-13  \n",
+      "2         2011-08-16  \n",
+      "3         2011-11-16  \n",
+      "4         2012-02-16  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# print 5 values of earnings_call_date and ticker where source = 'web'\n",
+    "print(earnings_call_dates[earnings_call_dates['source'] == 'web'].head())\n",
+    "# where source = 'kaggle'\n",
+    "print(earnings_call_dates[earnings_call_dates['source'] == 'kaggle'].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check values of ticker where source = 'kaggle'\n",
+    "# length of the intersection of these companies with the companies in credit_ratings_on_fixed_quarter_dates\n",
+    "print(len(set(earnings_call_dates[earnings_call_dates['source'] == 'kaggle']['ticker']).intersection(set(credit_ratings_on_fixed_quarter_dates['ticker']))))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1181,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -1220,6 +1192,7 @@
        "      <th>fixed_quarter_date</th>\n",
        "      <th>previous_fixed_quarter_date</th>\n",
        "      <th>earnings_call_date</th>\n",
+       "      <th>source</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1240,6 +1213,7 @@
        "      <td>2014-07-01 00:00:00.000000</td>\n",
        "      <td>2014-04-01 00:00:00.000000</td>\n",
        "      <td>2014-04-23</td>\n",
+       "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1258,6 +1232,7 @@
        "      <td>2014-10-01 00:00:00.000000</td>\n",
        "      <td>2014-07-01 00:00:00.000000</td>\n",
        "      <td>2014-07-22</td>\n",
+       "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1276,6 +1251,7 @@
        "      <td>2015-01-01 00:00:00.000000</td>\n",
        "      <td>2014-10-01 00:00:00.000000</td>\n",
        "      <td>2014-10-20</td>\n",
+       "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1294,6 +1270,7 @@
        "      <td>2015-04-01 00:00:00.000000</td>\n",
        "      <td>2015-01-01 00:00:00.000000</td>\n",
        "      <td>2015-01-27</td>\n",
+       "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1312,9 +1289,11 @@
        "      <td>2015-07-01 00:00:00.000000</td>\n",
        "      <td>2015-04-01 00:00:00.000000</td>\n",
        "      <td>2015-04-27</td>\n",
+       "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1348,6 +1327,7 @@
        "      <td>2015-10-01 00:00:00.000000</td>\n",
        "      <td>2015-07-01 00:00:00.000000</td>\n",
        "      <td>2015-08-04</td>\n",
+       "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8033</th>\n",
@@ -1366,6 +1346,7 @@
        "      <td>2016-01-01 00:00:00.000000</td>\n",
        "      <td>2015-10-01 00:00:00.000000</td>\n",
        "      <td>2015-11-03</td>\n",
+       "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8034</th>\n",
@@ -1384,6 +1365,7 @@
        "      <td>2016-04-01 00:00:00.000000</td>\n",
        "      <td>2016-01-01 00:00:00.000000</td>\n",
        "      <td>2016-02-16</td>\n",
+       "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8035</th>\n",
@@ -1402,6 +1384,7 @@
        "      <td>2016-07-01 00:00:00.000000</td>\n",
        "      <td>2016-04-01 00:00:00.000000</td>\n",
        "      <td>2016-05-04</td>\n",
+       "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8036</th>\n",
@@ -1420,10 +1403,11 @@
        "      <td>2016-10-01 00:00:00.000000</td>\n",
        "      <td>2016-07-01 00:00:00.000000</td>\n",
        "      <td>2016-08-03</td>\n",
+       "      <td>web</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8037 rows × 15 columns</p>\n",
+       "<p>8037 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1479,30 +1463,30 @@
        "8035                2016  2016-07-01 00:00:00.000000   \n",
        "8036                2016  2016-10-01 00:00:00.000000   \n",
        "\n",
-       "     previous_fixed_quarter_date earnings_call_date  \n",
-       "0     2014-04-01 00:00:00.000000         2014-04-23  \n",
-       "1     2014-07-01 00:00:00.000000         2014-07-22  \n",
-       "2     2014-10-01 00:00:00.000000         2014-10-20  \n",
-       "3     2015-01-01 00:00:00.000000         2015-01-27  \n",
-       "4     2015-04-01 00:00:00.000000         2015-04-27  \n",
-       "...                          ...                ...  \n",
-       "8032  2015-07-01 00:00:00.000000         2015-08-04  \n",
-       "8033  2015-10-01 00:00:00.000000         2015-11-03  \n",
-       "8034  2016-01-01 00:00:00.000000         2016-02-16  \n",
-       "8035  2016-04-01 00:00:00.000000         2016-05-04  \n",
-       "8036  2016-07-01 00:00:00.000000         2016-08-03  \n",
+       "     previous_fixed_quarter_date earnings_call_date source  \n",
+       "0     2014-04-01 00:00:00.000000         2014-04-23    web  \n",
+       "1     2014-07-01 00:00:00.000000         2014-07-22    web  \n",
+       "2     2014-10-01 00:00:00.000000         2014-10-20    web  \n",
+       "3     2015-01-01 00:00:00.000000         2015-01-27    web  \n",
+       "4     2015-04-01 00:00:00.000000         2015-04-27    web  \n",
+       "...                          ...                ...    ...  \n",
+       "8032  2015-07-01 00:00:00.000000         2015-08-04    web  \n",
+       "8033  2015-10-01 00:00:00.000000         2015-11-03    web  \n",
+       "8034  2016-01-01 00:00:00.000000         2016-02-16    web  \n",
+       "8035  2016-04-01 00:00:00.000000         2016-05-04    web  \n",
+       "8036  2016-07-01 00:00:00.000000         2016-08-03    web  \n",
        "\n",
-       "[8037 rows x 15 columns]"
+       "[8037 rows x 16 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query = '''\n",
-    "SELECT a.*, b.earnings_call_date\n",
+    "SELECT a.*, b.earnings_call_date, b.source\n",
     "FROM credit_ratings_on_fixed_quarter_dates a\n",
     "INNER JOIN earnings_call_dates b\n",
     "ON a.ticker = b.ticker\n",
@@ -1517,7 +1501,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "source\n",
+      "web    8037\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check source variable\n",
+    "print(credit_ratings_on_fixed_quarter_dates_with_earnings_call_date['source'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1650,20 +1654,20 @@
       "8035                2016  2016-07-01 00:00:00.000000   \n",
       "8036                2016  2016-10-01 00:00:00.000000   \n",
       "\n",
-      "     previous_fixed_quarter_date earnings_call_date  \n",
-      "0     2014-04-01 00:00:00.000000         2014-04-23  \n",
-      "1     2014-07-01 00:00:00.000000         2014-07-22  \n",
-      "2     2014-10-01 00:00:00.000000         2014-10-20  \n",
-      "3     2015-01-01 00:00:00.000000         2015-01-27  \n",
-      "4     2015-04-01 00:00:00.000000         2015-04-27  \n",
-      "...                          ...                ...  \n",
-      "8032  2015-07-01 00:00:00.000000         2015-08-04  \n",
-      "8033  2015-10-01 00:00:00.000000         2015-11-03  \n",
-      "8034  2016-01-01 00:00:00.000000         2016-02-16  \n",
-      "8035  2016-04-01 00:00:00.000000         2016-05-04  \n",
-      "8036  2016-07-01 00:00:00.000000         2016-08-03  \n",
+      "     previous_fixed_quarter_date earnings_call_date source  \n",
+      "0     2014-04-01 00:00:00.000000         2014-04-23    web  \n",
+      "1     2014-07-01 00:00:00.000000         2014-07-22    web  \n",
+      "2     2014-10-01 00:00:00.000000         2014-10-20    web  \n",
+      "3     2015-01-01 00:00:00.000000         2015-01-27    web  \n",
+      "4     2015-04-01 00:00:00.000000         2015-04-27    web  \n",
+      "...                          ...                ...    ...  \n",
+      "8032  2015-07-01 00:00:00.000000         2015-08-04    web  \n",
+      "8033  2015-10-01 00:00:00.000000         2015-11-03    web  \n",
+      "8034  2016-01-01 00:00:00.000000         2016-02-16    web  \n",
+      "8035  2016-04-01 00:00:00.000000         2016-05-04    web  \n",
+      "8036  2016-07-01 00:00:00.000000         2016-08-03    web  \n",
       "\n",
-      "[7981 rows x 15 columns]\n"
+      "[7981 rows x 16 columns]\n"
      ]
     }
    ],
@@ -1676,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1720,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1729,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -1747,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -1805,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
