--- a/Code/Data Loading and Cleaning/Earning Calls/merge_calls.ipynb
+++ b/Code/Data Loading and Cleaning/Earning Calls/merge_calls.ipynb
@@ -656,17 +656,6 @@
       "Columns: [symbol, quarter, year, date, content, source, web, date_day]\n",
       "Index: []\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_12760\\1960386828.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_final.drop(columns = ['date_day'], inplace = True)\n"
-     ]
     }
    ],
    "source": [
@@ -674,9 +663,7 @@
     "print(df_final[df_final.duplicated(subset=['symbol', 'date'], keep=False)])\n",
     "print(df_final[df_final.duplicated(subset=['symbol', 'year', 'quarter'], keep=False)])\n",
     "# on date_day\n",
-    "print(df_final[df_final.duplicated(subset=['symbol', 'date_day'], keep=False)])\n",
-    "# drop date_day\n",
-    "df_final.drop(columns = ['date_day'], inplace = True)"
+    "print(df_final[df_final.duplicated(subset=['symbol', 'date_day'], keep=False)])"
    ]
   },
   {
@@ -706,6 +693,43 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15100\\2325728378.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_final.rename(columns={\"date\": \"earnings_call_datetime\"}, inplace = True)\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15100\\2325728378.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_final['date'] = df_final['date_day']\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15100\\2325728378.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_final.drop(columns = \"date_day\", inplace = True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make date be renamed to earnings_call_datetime\n",
+    "df_final.rename(columns={\"date\": \"earnings_call_datetime\"}, inplace = True)\n",
+    "# switch date to date day\n",
+    "df_final['date'] = df_final['date_day']\n",
+    "# drop date_day\n",
+    "df_final.drop(columns = \"date_day\", inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
