--- a/Code/Data Loading and Cleaning/Credit Rating/Credit Ratings on Fixed Quarter Dates with Earnings Call Date for Linkup.ipynb
+++ b/Code/Data Loading and Cleaning/Credit Rating/Credit Ratings on Fixed Quarter Dates with Earnings Call Date for Linkup.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "[3171 rows x 14 columns]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "27         2016-10-01"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        "[9117 rows x 15 columns]"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1479,7 +1479,7 @@
        "[8037 rows x 16 columns]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1491,7 +1491,7 @@
     "INNER JOIN earnings_call_dates b\n",
     "ON a.ticker = b.ticker\n",
     "    AND a.previous_fixed_quarter_date <= b.earnings_call_date\n",
-    "        AND b.earnings_call_date <= a.fixed_quarter_date\n",
+    "        AND b.earnings_call_date < a.fixed_quarter_date\n",
     "'''\n",
     "\n",
     "# Run query\n",
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -1720,7 +1720,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1733,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -1809,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
