all data checks completed

--- a/Code/Data Loading and Cleaning/Credit Rating/Credit Ratings on Fixed Quarter Dates with Earnings Call Date for Linkup.ipynb
+++ b/Code/Data Loading and Cleaning/Credit Rating/Credit Ratings on Fixed Quarter Dates with Earnings Call Date for Linkup.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "[3171 rows x 14 columns]"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "27         2016-10-01"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
        "[9117 rows x 15 columns]"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -1479,12 +1479,14 @@
        "[8037 rows x 16 columns]"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# REQUIRE earnings call date to be before fixed quarter date\n",
+    "# Same day changes in response to calls unlikely\n",
     "query = '''\n",
     "SELECT a.*, b.earnings_call_date, b.source\n",
     "FROM credit_ratings_on_fixed_quarter_dates a\n",
@@ -1501,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -1595,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -1720,7 +1722,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1733,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
@@ -1809,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
